--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main-ce-new.ts"></script>
+    <script type="module" src="/src/playground/main-ce-new.ts"></script>
   </body>
 </html>
